Добавил валидацию полей

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
 
     <spring.version>5.2.1.RELEASE</spring.version>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -64,6 +63,12 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>4.0.1</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.6.Final</version>
     </dependency>
   </dependencies>
 
